# eedi-math

./: Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: index.md
eedi_math/: __init__.py  dataset.py  features.py  plots.py
eedi_math/modeling/: predict.py  train.py
